Nav Update, Film nav bar

--- a/film.html
+++ b/film.html
@@ -39,57 +39,70 @@
   
 </nav>
 
-<img src="featured-image.jpg" alt="Featured Film Image" style="width: 100%; height: auto; margin-top: 80px;">
 <div class="film-grid-wrapper">
 <div class="film-grid">
   <!-- Film 1 -->
    <div class="film-row">
-  <div class="film-card">
+
+    <div class="film-card">
     <a href="films/Film1.html">
-    <img src="films/FilmStills/poster.png" alt="Film 1">
-    <p>01. Scoop of Ignorance | 2024</p>
+    <img src="films/FilmStills/.png" alt="Film 1">
+    <p>01.Unknown</p>
   </a>
   </div>
-
-  <!-- Film 2 -->
+  <!-- Film 2 -->  
   <div class="film-card-right">
     <a href="films/Film2.html">
-    <img src="films/FilmStills/Vadapav_Poster.webp" alt="Film 2">
-    <p>02. The Story of Vadapav | 2022</p>
-    </a>
+    <img src="films/FilmStills/poster.png" alt="Film 2">
+    <p>02. Scoop of Ignorance | 2024</p>
+  </a>
   </div>
-  </div>
+   </div>
 
-  <!-- Film 3 (spans first column only) -->
-   <div class="film-row">
+  <!-- Film 3 -->
+  <div class="film-row">
   <div class="film-card">
     <a href="films/Film3.html">
-    <img src="films/FilmStills/SOS_Poster.png" alt="Film 3">
-    <p>03.  Soul of a Sapling | 2024</p>
+    <img src="films/FilmStills/Vadapav_Poster.webp" alt="Film 3">
+    <p>03. The Story of Vadapav | 2022</p>
     </a>
   </div>
-  <!--Film 4-->
+  
+
+  <!-- Film 4 (spans first column only) -->
+ 
   <div class="film-card-right">
     <a href="films/Film4.html">
-    <img src="film4.jpg" alt="Film 4">
-    <p>04.  Jio World Plaza - 1 Year Anniversary | 2024</p>
+    <img src="films/FilmStills/SOS_Poster.png" alt="Film 4">
+    <p>04.  Soul of a Sapling | 2024</p>
     </a>
   </div>
   </div>
-    <!--Film 5-->
-       <div class="film-row">
+  <!--Film 5-->
+    <div class="film-row">
   <div class="film-card">
     <a href="films/Film5.html">
-    <img src="film5.jpg" alt="Film 5">
-    <p>05.  Ajio Luxe Wkend 2025 - Ramp Walk | 2025</p>
+    <img src="film4.jpg" alt="Film 5">
+    <p>05.  Jio World Plaza - 1 Year Anniversary | 2024</p>
     </a>
   </div>
-      <!--Film 6-->
+  
+    <!--Film 6-->
   <div class="film-card-right">
     <a href="films/Film6.html">
-    <img src="films/FilmStills/Naggar_Poster.jpg" alt="Film 6">
-    <p>06.  Naggar Castle & People - Manali Short Documentary  | 2024</p>
+    <img src="film5.jpg" alt="Film 6">
+    <p>06.  Ajio Luxe Wkend 2025 - Ramp Walk | 2025</p>
     </a>
+  </div>
+  </div>
+      <!--Film 7-->
+  <div class="film-row">
+  <div class="film-card">
+    <a href="films/Film7.html">
+    <img src="films/FilmStills/Naggar_Poster.jpg" alt="Film 7">
+    <p>07.  Naggar Castle & People - Manali Short Documentary  | 2024</p>
+    </a>
+  </div>
   </div>
   </div>
 </div>
