--- a/films/Film5.html
+++ b/films/Film5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>  Ajio Luxe Wkend 2025 - Day 1 Ramp Walk</title>
+  <title> Jio World Plaza - 1 Year Anniversary</title>
    <link rel="stylesheet" href="../style.css"/>
    <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <style>
@@ -87,17 +87,17 @@
     height: 100%; 
     margin-bottom: 2%;        
   }
-      footer {
-      position: absolute;
-      bottom: 10px;
-      width: 100%;
-      text-align: center;
-      font-size: 12px;
-      line-height: 1.5;
-      color: #aaa;
-      z-index: 10;
-      padding: 0 10px;
-    }
+footer {
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.5;
+  color: #aaa;
+  z-index: 10;
+  padding: 20px 10px 10px;
+  margin-top: 50px;
+  background: black; /* optional */
+}
         body.fade-in {
       animation: fadeInAnimation ease 1s;
       animation-iteration-count: 1;
@@ -121,34 +121,34 @@
   <!-- Reuse your site-wide navbar -->
   <nav class="navbar">
     <ul>
-      <li class="custom-font"><a href="../index.html">Home</a></li>
+      <li class="custom-font"><a href="/">Home</a></li>
       <li class="separator"></li>
-      <li class="custom-font"><a href="../showreel.html">Showreel 2023-25</a></li>
+      <li class="custom-font"><a href="../showreel.html">Showreel</a></li>
       <li class="separator-with-logo"></li>
-      <li class="custom-font"><a href="../film.html">Filmography</a></li>
+      <li class="custom-font"><a href="../film.html">Projects</a></li>
       <li class="separator"></li>
       <li class="custom-font"><a href="../about.html">About</a></li>
     </ul>
+    
   </nav>
 
   <!-- Hero Image -->
   <img src="../croppedhome.png" alt="Below The Window Hero" class="hero-image" />
   <div class="custom-font">
-     <h1 class="film-title"> Ajio Luxe Wkend 2025 - Day 1 Ramp Walk</h1>
+     <h1 class="film-title"> Jio World Plaza - 1 Year Anniversary</h1>
    </div>
   <!-- Film Info Section -->
   <div class="film-content">
   <div class="film-column">
  
-    <p>2025<br>
-    Onsite Video Editor
-<br>
+    <p>2024<br>
+    Director of Photography & Sound<br>
   </div>
 
   <div class="film-column">
     <h3 class="film-subtitle"> Description</h3>
-    <p> Edited and delivered real-time event content during the Ajio Luxe Wkend 2025,
- including the ramp walk featuring Karan Johar & Sidharth Malhotra.</p>
+    <p> Created the official anniversary video for Jio World Plaza, collaborating with The
+ Jagnetics, Ezyze Visuals (3D), and Jagnetics (2D) to bring the celebration to life.</p>
   </div>
 
   <div class="film-column">
@@ -173,7 +173,7 @@
   </div>
   -->
   <div class="Iframe">
-    <iframe width="1500" height="805" src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7288498721531572224?collapsed=1" height="878" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+    <iframe width="1500" height="805" src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7267193098466672641?collapsed=1" height="878" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
   </div>
 
   <!-- Screenshot Grid -->
@@ -190,8 +190,8 @@
 
   <!-- Navigation Bar -->
   <div class="navigation-bar">
-    <span>← <a href="previous-film.html">Previous Project</a></span>
-    <span><a href="next-film.html">Next Project</a> →</span>
+    <span>← <a href="Film4.html">Previous Project</a></span>
+    <span><a href="Film6.html">Next Project</a> →</span>
   </div>
 
   <!-- Custom Footer -->
