--- a/films/Film7.html
+++ b/films/Film7.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title> Scoop of Ignorance</title>
-  <link rel="stylesheet" href="../style.css"/>
+  <title>  Naggar Castle & People - Manali Short Documentary </title>
+   <link rel="stylesheet" href="../style.css"/>
    <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <style>
     body, html {
@@ -23,23 +23,15 @@
 .film-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 8%;
-  max-width: 1500px;
+  gap: 20%;
+  max-width: 1200px;
   margin: 10px 50px 75px;
   padding: 0 30px;
 }
     .film-column {
       flex: 1 1 30%;
       min-width: 280px;
-      max-width: 700px;
-    }
-      .film-column1 {
-      flex: 1 1 30%;
-      min-width: 380px;
-      max-width: 700px;
-    }
-      .film-column1 ul{
-      line-height:1.75 ;
+      max-width: 400px;
     }
     .film-column h2 {
       font-weight: 700;
@@ -141,66 +133,29 @@ footer {
   </nav>
 
   <!-- Hero Image -->
-  <img src="FilmStills/header.jpg" alt="Scoop of Ignorance" class="hero-image" />
+  <img src="../croppedhome.png" alt="Below The Window Hero" class="hero-image" />
   <div class="custom-font">
-     <h1 class="film-title">Scoop of Ignorance</h1>
+     <h1 class="film-title"> Naggar Castle & People - Manali Short Documentary</h1>
    </div>
   <!-- Film Info Section -->
   <div class="film-content">
   <div class="film-column">
  
     <p>2024<br>
-    Producer / Sound Designer<br>
-    Atharva Mhaske
+    Director / Cinematographer / Editor
+<br>
   </div>
 
   <div class="film-column">
     <h3 class="film-subtitle"> Description</h3>
-    <p> A Public Service Announcement (PSA) focusing on the illiteracy crisis in India. The film
- highlights the profound impact of ignorance and illiteracy on individuals and communities, urging for
- societal and educational reform.</p>
+    <p> A short documentary capturing the essence of Naggar Castle and the local people of
+ Manali, showcasing the region's rich cultural and architectural heritage.</p>
   </div>
 
   <div class="film-column">
-    <h3 class="film-subtitle">Credits</h3><!--Optional to add Credits-->
-    <p> 
-Written & Directed by
-Vardhaman Abad
-
-Produced by
-Atharva Mhaske<br>
-
-Director of Photography
-Sarvesh Peshkar<br>
-
-Edited by
-Vardhaman Abad & Tanishq Bhawnani<br>
-
-Sound Design by
-Atharva Mhaske<br>
-
-DI & VFX by
-Vardhaman Abad<br>
+    <h3 class="film-subtitle"></h3><!--Optional to add Credits-->
+    <p>
     </p>
-  </div >
-  <div class="film-column1">
-      <h3 class="film-subtitle"> Awards</h3>
-      <ul>
-    <li>International Kolkata Short Film Festival<br>
-Official Award Winner – PSA<br></li>
-
-<li>Goa Short Film Festival — Goa, India<br>
-Official Award Winner – Best Advertisement Film<br></li>
-
-<li>11th Pink City International Short Film Festival<br>
-Official Award Winner<br></li>
-
-<li>Miami 4 Social Change Youth Film Festival<br>
-Official Award Winner – PSA<br></li>
-
-<li>Open Festival Marseille — Marseille, France<br>
-Official Selection<br></li>
-</ul>
   </div>
 </div>
 
@@ -219,21 +174,25 @@ Official Selection<br></li>
   </div>
   -->
   <div class="Iframe">
-    <iframe width="1500" height="805" src="https://www.youtube.com/embed/cLlyVMPK3Eg?controls=1&modestbranding=1&rel=0&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="1500" height="805" src="https://www.youtube.com/embed/w9T7EmAP-kY?si=adPmYQB7aX4mlYc4controls=1&modestbranding=1&rel=0&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 
   <!-- Screenshot Grid -->
   <div class="screenshot-grid">
-    <img src="FilmStills/SOISC.jpg" alt="Screenshot 1" />
-    <img src="FilmStills/SOISC1.jpg" alt="Screenshot 2" />
-    <img src="FilmStills/SOISC2.jpg" alt="Screenshot 3" />
-    <img src="FilmStills/SOISC3.jpg" alt="Screenshot 4" />
+    <img src="btw1.jpg" alt="Screenshot 1" />
+    <img src="btw2.jpg" alt="Screenshot 2" />
+    <img src="btw3.jpg" alt="Screenshot 3" />
+    <img src="btw4.jpg" alt="Screenshot 4" />
+    <img src="btw5.jpg" alt="Screenshot 5" />
+    <img src="btw6.jpg" alt="Screenshot 6" />
+    <img src="btw7.jpg" alt="Screenshot 7" />
+    <img src="btw8.jpg" alt="Screenshot 8" />
   </div>
 
   <!-- Navigation Bar -->
   <div class="navigation-bar">
-    <span>← <a href="Film1.html">Previous Project</a></span>
-    <span><a href="Film3.html">Next Project</a> →</span>
+    <span>← <a href="Film6.html">Previous Project</a></span>
+    <span><a href="Film7.html"></a> </span>
   </div>
 
   <!-- Custom Footer -->
