Optimized for mobile

--- a/film.html
+++ b/film.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Filmography - Atharva Mhaske</title>
   <link rel="icon" type="Image/png" href="logo.png">
-   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -26,8 +26,9 @@
 
 <body>
 
-<nav class="navbar">
-    <ul>
+  <nav class="navbar">
+    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+    <ul class="nav-links">
       <li class="custom-font"><a href="/">Home</a></li>
       <li class="separator"></li>
       <li class="custom-font"><a href="showreel.html">Showreel</a></li>
@@ -36,8 +37,7 @@
       <li class="separator"></li>
       <li class="custom-font"><a href="about.html">About</a></li>
     </ul>
-  
-</nav>
+  </nav>
 
 <div class="film-grid-wrapper">
 <div class="film-grid">
@@ -130,6 +130,9 @@
   scrollTopBtn.onclick = function() {
     document.documentElement.scrollTo({top: 0, behavior: "smooth"});
   };
+   function toggleMenu() {
+  document.querySelector('.nav-links').classList.toggle('show');
+}
 </script>
 
 </body>
