--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Atharva Mhaske</title>
   <link rel="icon" type="Image/png" href="lo">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -142,7 +142,8 @@ body {
   </video>
 
   <nav class="navbar">
-    <ul>
+    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+    <ul class="nav-links">
       <li class="custom-font"><a href="/">Home</a></li>
       <li class="separator"></li>
       <li class="custom-font"><a href="showreel.html">Showreel</a></li>
@@ -151,7 +152,6 @@ body {
       <li class="separator"></li>
       <li class="custom-font"><a href="about.html">About</a></li>
     </ul>
-    
   </nav>
   <body>
     <img class="cover" src="black.jpg">
@@ -170,6 +170,9 @@ body {
 
 <script>
   document.body.classList.add('fade-in');
+  function toggleMenu() {
+  document.querySelector('.nav-links').classList.toggle('show');
+}
 </script>
 
 </body>
