--- a/showreel.html
+++ b/showreel.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Showreel 2023-25 - Atharva Mhaske</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -25,8 +25,9 @@
 
 <body>
 
-<nav class="navbar">
-    <ul>
+  <nav class="navbar">
+    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+    <ul class="nav-links">
       <li class="custom-font"><a href="/">Home</a></li>
       <li class="separator"></li>
       <li class="custom-font"><a href="showreel.html">Showreel</a></li>
@@ -35,8 +36,7 @@
       <li class="separator"></li>
       <li class="custom-font"><a href="about.html">About</a></li>
     </ul>
-  
-</nav>
+  </nav>
 
 <div style="flex: 1; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 40px 20px;">
   <div style="width: 1100px; max-width: 90%; aspect-ratio: 16/9; overflow: hidden; border-radius: 8px;">
@@ -65,6 +65,9 @@
   scrollTopBtn.onclick = function() {
     document.documentElement.scrollTo({top: 0, behavior: "smooth"});
   };
+   function toggleMenu() {
+  document.querySelector('.nav-links').classList.toggle('show');
+}
 </script>
 
 </body>
