Code Fixed nav bar

--- a/films/Film1.html
+++ b/films/Film1.html
@@ -143,11 +143,11 @@ footer {
     <ul class="nav-links">
       <li class="custom-font"><a href="/">Home</a></li>
       <li class="separator"></li>
-      <li class="custom-font"><a href="showreel.html">Showreel</a></li>
+      <li class="custom-font"><a href="/showreel.html">Showreel</a></li>
       <li class="separator-with-logo"></li>
-      <li class="custom-font"><a href="film.html">Projects</a></li>
+      <li class="custom-font"><a href="/film.html">Projects</a></li>
       <li class="separator"></li>
-      <li class="custom-font"><a href="about.html">About</a></li>
+      <li class="custom-font"><a href="/about.html">About</a></li>
     </ul>
   </nav>
 
